<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/enter_url"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etCompressionPercent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/enter_compression_quality"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etUrl" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCompressImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/compress_image"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@color/purple_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnClear"
                app:layout_constraintTop_toBottomOf="@id/etCompressionPercent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@id/btnCompressImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etCompressionPercent" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivOriginalImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@id/ivCompressImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnCompressImage" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCompressImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivOriginalImage"
                app:layout_constraintTop_toBottomOf="@id/btnCompressImage" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCompressWithResizeImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toStartOf="@id/ivCompressImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOriginal" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCompressTill1MBImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivOriginalImage"
                app:layout_constraintTop_toBottomOf="@id/tvCompressed" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIconImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="32dp"
                android:scaleType="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCompressTill1MB" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOriginal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/original"
                android:textSize="10sp"
                app:layout_constraintEnd_toStartOf="@id/tvCompressed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivOriginalImage"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCompressed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="10sp"
                android:text="@string/compressed_with_given_quality"
                app:layout_constraintStart_toEndOf="@id/tvOriginal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCompressImage"
                tools:ignore="SmallSp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCompressWithResize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/compress_and_resize"
                android:textSize="10sp"
                app:layout_constraintEnd_toStartOf="@id/tvCompressed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCompressWithResizeImage"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCompressTill1MB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/compress_till_1_mb"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@id/tvOriginal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCompressTill1MBImage"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResizeOnly"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/resize_only_with_custom_width"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivIconImage"
                tools:ignore="SmallSp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>